--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.0
   dio: ^4.0.6
+  styled_widget: ^0.4.1
 
 dev_dependencies:
   flutter_test:
