--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "sequelize-cli": "6.6.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "cors": "^2.8.5"
   }
 }
